# qsc

./: .gitmodules  CMakeLists.txt  README.md
src/: lexer.c  lexer.cpp  lexer.h  lexer.hpp  log.c  log.h  main.c  main.cpp  parser.c  parser.h  token.c  token.h
src/ast/: expr.c  expr.h
test/: test.qs
